2012-12-17  Julien Chaffraix  <jchaffraix@webkit.org>

        Add some unit testing for WTF::clampTo* functions
        https://bugs.webkit.org/show_bug.cgi?id=105060

        Reviewed by Emil A Eklund.

        The new tests are targeted at clamping to int / unsigned and float as those are
        the one explicitely exposed through more dedicated functions (like clampToInteger,
        clampToPositiveInteger and clampToFloat).

        * TestWebKitAPI/Tests/WTF/MathExtras.cpp:

2012-12-17  Eric Seidel  <eric@webkit.org>

        rpt --profile --chromium-android throws exception
        https://bugs.webkit.org/show_bug.cgi?id=105061

        Reviewed by Daniel Bates.

        Somehow popen(args) got turned into popen(*args) at some point,
        which caused my new stringify code to fail when args was passed by name.
        Fixed and tested.

        * Scripts/webkitpy/common/system/executive.py:
        (Executive._stringify_args):
        (Executive):
        (Executive.popen):
        * Scripts/webkitpy/common/system/executive_unittest.py:
        (ExecutiveTest.test_popen_args):

2012-12-17  Mark Pilgrim  <pilgrim@chromium.org>

        Use Platform::current() instead of webKitPlatformSupport() in DumpRenderTree
        https://bugs.webkit.org/show_bug.cgi?id=105054

        Reviewed by Jochen Eisinger.

        Part of a refactoring series; see tracking bug 82948.

        * DumpRenderTree/chromium/NotificationPresenter.cpp:
        (NotificationPresenter::show):
        * DumpRenderTree/chromium/Task.cpp:
        (postTask):
        * DumpRenderTree/chromium/TestRunner/src/WebTestPlugin.cpp:

2012-12-17  Emil A Eklund  <eae@chromium.org>

        Clamp values in LayoutUnit::operator/ when SATURATED_LAYOUT_ARITHMETIC is enabled
        https://bugs.webkit.org/show_bug.cgi?id=104955

        Reviewed by Julien Chaffraix.

        Add tests for LayoutUnit.

        * TestWebKitAPI/CMakeLists.txt:
        * TestWebKitAPI/ForwardingHeaders: Added.