@@ -1,3 +1,12 @@
+2012-12-17  Adam Klein  <adamk@chromium.org>
+
+        build-webkit: rename --template-tag to --template-element to match ENABLE #define name
+        https://bugs.webkit.org/show_bug.cgi?id=105072
+
+        Reviewed by Laszlo Gombos.
+
+        * Scripts/webkitperl/FeatureList.pm:
+
 2012-12-17  Julien Chaffraix  <jchaffraix@webkit.org>
 
         Add some unit testing for WTF::clampTo* functions
